src/test/test-models/good/fun_args_0.stan
functions { real foo() { return 1.7; } } model { }
