src/test/test-models/bad/reserved/unit_vector.stan
data {
  real unit_vector;
}
model {
}
